k8s/aks/9-create-prodev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prodev 
  labels:
    name: prodev
